--- a/donations.html
+++ b/donations.html
@@ -24,8 +24,8 @@
     <li class="docs"><a href="https://github.com/der-On/XPlane2Blender/wiki/docs-3.2x-main">Docs v3.2</a></li>
     <li class="docs"><a href="https://github.com/der-On/XPlane2Blender/wiki/docs-3.3x-main">Docs v3.3</a></li>
     <li class="donations"><a href="donations.html">Donate</a></li>
-    <li class="downloads"><a href="https://github.com/der-On/XPlane2Blender/zipball/master">ZIP</a></li>
-    <li class="downloads"><a href="https://github.com/der-On/XPlane2Blender/archive/v3.3.0.zip">v3.3beta ZIP</a></li>
+    <li class="downloads"><a href="https://github.com/der-On/XPlane2Blender/zipball/master">v3.2</a></li>
+    <li class="downloads"><a href="https://github.com/der-On/XPlane2Blender/archive/v3.3.0.zip">v3.3 beta</a></li>
     <li class="title">DOWNLOADS</li>
 </nav>
 
