--- a/index.html
+++ b/index.html
@@ -1,60 +1,61 @@
 <!doctype html>
 <html>
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>XPlane2Blender by der-On | index</title>
-    <link rel="stylesheet" href="/stylesheets/styles.css">
-    <link rel="stylesheet" href="/stylesheets/pygment_trac.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script src="/javascripts/respond.js"></script>
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-    <!--[if lt IE 8]>
-    <link rel="stylesheet" href="/stylesheets/ie.css">
-    <![endif]-->
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="chrome=1">
+  <title>XPlane2Blender by der-On | index</title>
+  <link rel="stylesheet" href="/stylesheets/styles.css">
+  <link rel="stylesheet" href="/stylesheets/pygment_trac.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+  <script src="/javascripts/respond.js"></script>
+  <!--[if lt IE 9]>
+  <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+  <![endif]-->
+  <!--[if lt IE 8]>
+  <link rel="stylesheet" href="/stylesheets/ie.css">
+  <![endif]-->
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
 </head>
 <body>
-<div id="header">
+  <div id="header">
     <nav>
-    <li class="fork"><a href="https://github.com/der-On/XPlane2Blender">View On GitHub</a></li>
-    <li class="docs"><a href="https://der-on.gitbooks.io/xplane2blender-docs/content/v3.3/index.html">Docs v3.3</a></li>
-    <li class="docs"><a href="https://der-on.gitbooks.io/xplane2blender-docs/content/v3.2/index.html">Docs v3.2</a></li>
-    <li class="donations"><a href="donations.html">Donate</a></li>
-    <li class="downloads"><a href="https://github.com/der-On/XPlane2Blender/zipball/master">v3.2</a></li>
-    <li class="downloads"><a href="https://github.com/der-On/XPlane2Blender/archive/v3.3.12.zip">v3.3 beta</a></li>
-    <li class="title">DOWNLOADS</li>
-</nav>
+      <li class="fork"><a href="https://github.com/der-On/XPlane2Blender">View On GitHub</a></li>
+      <li class="docs"><a href="https://der-on.gitbooks.io/xplane2blender-docs/content/v3.3/index.html">Docs v3.3</a></li>
+      <li class="docs"><a href="https://der-on.gitbooks.io/xplane2blender-docs/content/v3.2/index.html">Docs v3.2</a></li>
+      <li class="donations"><a href="donations.html">Donate</a></li>
+      <li class="downloads"><a href="https://github.com/der-On/XPlane2Blender/zipball/master">v3.2</a></li>
+      <li class="downloads"><a href="https://github.com/der-On/XPlane2Blender/archive/v3.3.12.zip">v3.3 beta</a></li>
+      <li class="title">DOWNLOADS</li>
+    </nav>
 
-</div><!-- end header -->
+  </div><!-- end header -->
 
-<div class="wrapper">
+  <div class="wrapper">
 
     <section>
-        <div id="title">
-    <h1><a href="/index.html">XPlane2Blender</a></h1>
-    <p>Scenery &amp; Cockpit import &amp; export scripts for Blender and the X-Plane Flight Simulator</p>
-    <hr>
-    <span class="credits left">Project maintained by <a href="https://github.com/der-On">der-On</a></span>
-    <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
-</div>
+      <div id="title">
+        <h1><a href="/index.html">XPlane2Blender</a></h1>
+        <p>Scenery &amp; Cockpit export scripts for Blender and the X-Plane Flight Simulator</p>
+        <hr>
+        <span class="credits left">Project maintained by <a href="https://github.com/tngreene">tngreene</a> and <a href="https://github.com/bsupnik">bsupnik</a></span>
+        <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
+      </div>
 
-        <p>This addon for <a href="http://www.blender.org/">Blender</a> 2.6x makes it possible to export Objects to the <a href="http://developer.x-plane.com/?article=obj8-file-format-specification">X-Plane object format</a> (.obj)        <h2></p>
-<h2 id="requirements-">Requirements:</h2>
-<ul>
-<li>Blender 2.69 or higher</li>
-<li>Python 3.1 or higher</li>
-</ul>
-<h2 id="how-to-use-">How to use:</h2>
-<p>See the <a href="https://github.com/der-On/XPlane2Blender/wiki/docs-3.2x-main">docs in the wiki</a>.</p>
-
+      <p>
+        This addon for <a href="http://www.blender.org/">Blender</a> 2.7x and up makes it possible to export Objects to the <a href="http://developer.x-plane.com/?article=obj8-file-format-specification">X-Plane object format</a> (.obj)
+      </p>
+      <h2 id="requirements-">Requirements:</h2>
+      <ul>
+        <li>Blender 2.70 or higher</li>
+        <li>Python 3.1 or higher</li>
+      </ul>
+      <h2 id="how-to-use-">How to use:</h2>
+      <p>See the <a href="https://der-on.gitbooks.io/xplane2blender-docs/content/">docs</a>.</p>
     </section>
 
-</div>
-<!--[if !IE]><script>fixScale(document);</script><![endif]-->
+  </div>
+  <!--[if !IE]><script>fixScale(document);</script><![endif]-->
 
-</body>
-</html>
+  </body>
+  </html>
