--- a/index.html
+++ b/index.html
@@ -21,11 +21,9 @@
   <div id="header">
     <nav>
       <li class="fork"><a href="https://github.com/der-On/XPlane2Blender">View On GitHub</a></li>
-      <li class="docs"><a href="https://der-on.gitbooks.io/xplane2blender-docs/content/v3.3/index.html">Docs v3.3</a></li>
-      <li class="docs"><a href="https://der-on.gitbooks.io/xplane2blender-docs/content/v3.2/index.html">Docs v3.2</a></li>
+      <li class="docs"><a href="https://der-on.gitbooks.io/xplane2blender-docs/content/">Docs</a></li>
       <li class="donations"><a href="donations.html">Donate</a></li>
-      <li class="downloads"><a href="https://github.com/der-On/XPlane2Blender/zipball/master">v3.2</a></li>
-      <li class="downloads"><a href="https://github.com/der-On/XPlane2Blender/archive/v3.3.12.zip">v3.3 beta</a></li>
+      <li class="downloads"><a href="https://github.com/der-On/XPlane2Blender/releases">Releases</a></li>
       <li class="title">DOWNLOADS</li>
     </nav>
 
